--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- Header -->
+<header>
 	<div class="container">
 		<div class="row">
-			<div class="col-2">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatibus ad animi inventore ipsa optio explicabo, quidem molestiae delectus non, id placeat consequuntur quaerat ex velit. Voluptatum dolorum labore aperiam!
-			</div>
-			<div class="col-8">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dolorum consequatur porro ut rem, voluptas pariatur reprehenderit quibusdam, eaque natus obcaecati. Magnam ipsam ullam sit officiis consequuntur at illum mollitia.
+			<div class="col-md-1 offset-md-11">
+				<div class="menu">
+					Menu
+				</div>
 			</div>
 		</div>
+		<div class="header__content">
+			<div class="row">
+				<div class="col-md-5 col-sm-12">
+					<img src="img/profile.jpg" alt="profile">	
+				</div>
+				<div class="col-md-6 col-sm-12">
+					<div class="header__content">
+						<h2>Marilyn Ward</h2>
+						<h1>Frontend Developer UI</h1>	
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti illo et tempora autem, distinctio maxime voluptatem, impedit molestias voluptatibus libero fugiat adipisci consectetur a odit vitae facilis ipsum. Laudantium, consequatur.</p>	
+						<div class="row">
+							<div class="col-5">
+								<div class="zbutton">
+									<a href="#">Get In touch</a>
+								</div>
+							</div>
+							<div class="col-5">
+								<div class="zbutton--lineal">
+									<a href="#">My Work</a>
+								</div>
+							</div>		
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>
 	</div>
+</header>
+<!-- /Header -->
 
 <script src="js/bootstrap.min.js"></script>
 </body>
