--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ZerOne Portfolio</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -42,12 +43,12 @@
 								<h1>Frontend Developer UI</h1>	
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti illo et tempora autem, distinctio maxime voluptatem, impedit molestias voluptatibus libero fugiat adipisci consectetur a odit.</p>	
 								<div class="row">
-									<div class="col-5">
+									<div class="col-md-5 col-sm-6">
 										<div class="zbutton">
 											<a href="#">Get In touch</a>
 										</div>
 									</div>
-									<div class="col-5">
+									<div class="col-md-5 col-sm-6">
 										<div class="zbutton--lineal">
 											<a href="#">My Work</a>
 										</div>
