--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- Header -->
-<header>
+<header class="header__home">
 	<div class="container">
 		<div class="menu">
 			<a href="#"  id="trigger-overlay"><img src="img/menu.svg" alt="menú"></a>
@@ -21,8 +21,8 @@
 			<button type="button" class="overlay-close">Close</button>
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Work</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="/allworks.html">Work</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
