--- a/allworks.html
+++ b/allworks.html
@@ -60,66 +60,84 @@
 
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item1">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>MidNight 12:00</h2>
-					</div>
+					<a href="work.html">
+						<a href="work.html">
+							<div class="info">
+								<h3>Web Design</h3>
+								<h2>MidNight 12:00</h2>
+							</div>
+						</a>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item2">
-					<div class="info">
-						<h3>Photography</h3>
-						<h2>Ximena Gomez</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Photography</h3>
+							<h2>Ximena Gomez</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item3">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>Blog Personal</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Web Design</h3>
+							<h2>Blog Personal</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item4">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>Amigos y mas</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Web Design</h3>
+							<h2>Amigos y mas</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item5">
-					<div class="info">
-						<h3>Logo Design</h3>
-						<h2>Figma 1</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Logo Design</h3>
+							<h2>Figma 1</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item6">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>MidNight 12:00</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Web Design</h3>
+							<h2>MidNight 12:00</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item3">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>MidNight 12:00</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Web Design</h3>
+							<h2>MidNight 12:00</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="allworks__item allworks__item2">
-					<div class="info">
-						<h3>Web Design</h3>
-						<h2>MidNight 12:00</h2>
-					</div>
+					<a href="work.html">
+						<div class="info">
+							<h3>Web Design</h3>
+							<h2>MidNight 12:00</h2>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
