--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="/allworks.html">Work</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</div>	
@@ -260,7 +260,7 @@
 </section>
 
 <!-- Footer -->
-<footer class="espaciado">
+<footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
