--- a/allworks.html
+++ b/allworks.html
@@ -163,7 +163,7 @@
 <!-- Me -->
 
 <!-- Footer -->
-<footer class="espaciado">
+<footer>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
