cambios en el menú

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="/allworks.html">Work</a></li>
+					<li><a href="allworks.html">Work</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -270,10 +270,10 @@
 				<p>+57 3116106041</p>
 
 				<ul>
-					<li><a href="#"><img src="img/instagram.svg" alt=""></a></li>
-					<li><a href="#"><img src="img/behance.svg" alt=""></a></li>
-					<li><a href="#"><img src="img/github.svg" alt=""></a></li>
-					<li><a href="#"><img src="img/twitter.svg" alt=""></a></li>
+					<li><a href="#"><img src="img/social/instagram.svg" alt=""></a></li>
+					<li><a href="#"><img src="img/social/behance.svg" alt=""></a></li>
+					<li><a href="#"><img src="img/social/github.svg" alt=""></a></li>
+					<li><a href="#"><img src="img/social/twitter.svg" alt=""></a></li>
 				</ul>
 			</div>
 		</div>
