--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="/allworks.html">Work</a></li>
+					<li><a href="allworks.html">Work</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
