--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</div>
 									<div class="col-md-5 col-sm-6">
 										<div class="zbutton--lineal">
-											<a href="#">My Work</a>
+											<a href="allworks.html">My Work</a>
 										</div>
 									</div>		
 								</div>
@@ -99,7 +99,7 @@
 
 			<div class="col-md-4 offset-md-4">
 				<div class="zbutton">
-					<a href="#">See Example</a>
+					<a href="work.html">See Example</a>
 				</div>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 		</div>
 		<div class="col-md-4 offset-md-4">
 			<div class="zbutton--lineal--blanco">
-				<a href="#">All Works</a>
+				<a href="allworks.html">All Works</a>
 			</div>
 		</div>
 	</div>
